# transcriptor

./: .gitignore  README.md  feht-ychebnik-Valvil-19v.fr.cleaned.txt  feht-ychebnik-Valvil-19v.fr.txt  feht-ychebnik-Valvil-19v.fr.v2.txt  feht-ychebnik-Valvil-19v.fr.v3.txt  pyproject.toml
scripts/: build_v4_formatted_pdf.py  improve_french_transcription.py  improve_french_transcription_v2.py  improve_french_transcription_v3.py
src/transcriptor/: __init__.py  cli.py  ocr.py  pdf_writer.py  pipeline.py
tests/: test_ocr_helpers.py  test_pdf_writer.py
